# studies-computational-geometry

./: .gitignore  README.md  pyproject.toml
src/computational_geo/: __init__.py  cli.py  main.py  plotting.py  web.py
src/computational_geo/computations/: convex_hull.py  intersection_points.py
tests/: test_convex_hull.py  test_intersection_points.py
