[project]
name = "computational-geo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mban7", email = "banasikm07@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
computational-geo = "computational_geo:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
