[project]
name = "computational-geo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mban7", email = "banasikm07@gmail.com" }
]
requires-python = ">=3.14"
dependencies = ["rich", "streamlit", "matplotlib"]

[project.scripts]
computational-geo = "computational_geo.cli:main"
computational-geo-web = "computational_geo.main:run_web"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
